# continuum

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PRD.md  README.md  package-lock.json  package.json  tailwind.config.ts
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: UNIMPLEMENTED_COMPONENTS.md  avatar.rs  avatar.spec.md  badge.rs  badge.spec.md  button.rs  button.spec.md  card.rs  card.spec.md  checkbox.spec.md  input.rs  input.spec.md  mod.rs  navbar.rs  navbar.spec.md  radio.spec.md  range.spec.md  select.spec.md  table.rs  table.spec.md  textarea.spec.md  toggle.rs  toggle.spec.md
app/src/components/accordion/: accordion.spec.md  mod.rs  tests.rs
app/src/components/alert/: alert.spec.md  mod.rs
app/src/components/auth_guard/: mod.rs
app/src/components/avatar/: avatar.spec.md  mod.rs
app/src/components/badge/: badge.spec.md  mod.rs
app/src/components/breadcrumbs/: breadcrumbs.spec.md  mod.rs
app/src/components/button/: button.spec.md  mod.rs
app/src/components/card/: card.spec.md  mod.rs
app/src/components/checkbox/: checkbox.spec.md  mod.rs
app/src/components/container/: container.spec.md  mod.rs
app/src/components/countdown/: countdown.spec.md  mod.rs
app/src/components/divider/: divider.spec.md  mod.rs
app/src/components/drawer/: drawer.spec.md  mod.rs
app/src/components/dropdown/: dropdown.spec.md  mod.rs
app/src/components/fade_in/: mod.rs
app/src/components/footer/: footer.spec.md  mod.rs
app/src/components/github_login_button/: mod.rs  tests.rs  utils.rs
app/src/components/header/: authenticated_header.rs  mod.rs  public_header.rs  theme_toggle.rs
app/src/components/heading/: mod.rs  section_title.rs
app/src/components/hero/: hero.spec.md  mod.rs
app/src/components/input/: input.spec.md  mod.rs
app/src/concepts/: mod.rs
app/src/github/: client.rs  mod.rs  queries.rs  types.rs
app/src/hooks/: mod.rs  tests.rs  use_auth.rs  use_auth_client.rs
app/src/mock/: data.rs  mod.rs
app/src/pages/: README.md  mod.rs
app/src/synchronizations/: mod.rs  ranking.spec.md  ranking_sync.rs  ranking_sync_test.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  state.rs
server/src/auth/: middleware.rs  mod.rs  oauth.rs  session.rs
(+230 files in other folders)
