[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum = { workspace = true, features = ["macros"] }
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
oauth2 = "4.4"
cookie = "0.18"
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
time = "0.3"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
